# lyamda

./: Cargo.toml
benches/: eval.rs
src/: lib.rs
src/fix/: fix.rs  functors.rs  mod.rs  std.rs
src/fixlam/: integers.rs  lam.rs  mod.rs
src/lya/: debrujin.rs  evaluate.rs  flavour.rs  mda.rs  mod.rs  uints.rs
src/lya/evaluate/: ctx.rs  step.rs  test.rs  value.rs
