[package]
name = "lyamda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
thiserror = "1.0.40"
derive_more = "0.99.17"
once_cell = "1.17.1"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "eval"
harness = false


